# wxc50-remote

./: .gitignore  README.md  package-lock.json  package.json  webpack.config.js
src/: Remote.css  Remote.jsx  index.html  index.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/icons/: index.js
