[package]
name = "wxc50_remote"
version = "1.0.0"
description = "Remote controller for Yamaha WXC-50"
authors = ["malatalo"]
license = ""
repository = ""
default-run = "wxc50_remote"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-rc.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-rc.0", features = ["api-all", "system-tray"] }
reqwest = { version = "0.11", features = ["json"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
